crates/core/tests/ui/obs_must_use.stderr
error[E0624]: associated function `new` is private
 --> tests/ui/obs_must_use.rs:6:39
  |
6 |     let _at_least_once = AtLeastOnce::new(CheckpointId::new("obs-must-use"));
  |                                       ^^^ private associated function
  |
 ::: src/store/delivery/observation.rs
  |
  |     pub(crate) fn new(checkpoint_id: CheckpointId) -> Self {
  |     ------------------------------------------------------ private associated function defined here

error[E0624]: associated function `new` is private
 --> tests/ui/obs_must_use.rs:8:22
  |
8 |         AtLeastOnce::new(CheckpointId::new("obs-must-use")),
  |                      ^^^ private associated function
  |
 ::: src/store/delivery/observation.rs
  |
  |     pub(crate) fn new(checkpoint_id: CheckpointId) -> Self {
  |     ------------------------------------------------------ private associated function defined here
